[package]
name = "openjp2"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
version = "0.4.0"
license = "BSD-2-Clause"
description = "Rust port of Openjpeg."
repository = "https://github.com/Neopallium/openjp2"
homepage = "https://github.com/Neopallium/openjp2/tree/master/openjp2-rs"
documentation = "https://docs.rs/openjp2"
keywords = ["j2k", "jp2", "jpeg2000", "image"]
edition = "2018"
autobins = false

[lib]
name = "openjp2"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bitflags = "1.3.2"
libc = "0.2"
log = "0.4.17"
sprintf = "0.1.3"

smallvec = "1.13"

[features]
default = ["std", "file-io"]
file-io = []
std = ["log/std"]
