[package]
name = "laya"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
futures-lite = "1.13" # glommio requires 1.13.0
glommio = "0.9.0"
hyper = { version = "1.4.1", features = ["server", "http2", "http1"] }
hyper-util = { version = "0.1.6", features = ["server-auto", "server", "http2", "http1"] }
num_cpus = "1.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
once_cell = "1.19.0"
